<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.AuthenticationActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-70dp"
        android:layout_marginEnd="15dp"
        android:background="@color/white"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/mAccent"
                android:textSize="20dp"
                android:textStyle="bold" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/mPrimary"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/gray">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>







            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/mPrimary"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/gray">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/mPrimary"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/gray">

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:backgroundTint="@color/mAccent"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/mAccent" />

                <TextView
                    android:id="@+id/loginbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/login"
                    android:textColor="@color/mAccent" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>